--- a/14 - Grid Template Areas/area-line-names-START.html
+++ b/14 - Grid Template Areas/area-line-names-START.html
@@ -46,6 +46,20 @@
     .container {
       display: grid;
       grid-gap: 20px;
+
+      grid-template-areas:
+        "P P P P H H H H"
+        "P P P P H H H H"
+        "P P P P H H H H"
+        "P P P P H H H H"
+    }
+
+    .item3 {
+      /* grid-area: P; */
+      /* grid-column: P-start / P-end; */
+      grid-column: P-start / H-end;
+      grid-row-end: P-end;
+
     }
   </style>
 </body>
